保護術式補助具をForgeのMixinとダメージ処理順へ適合